<resources>
    <string name="app_name" translatable="false">Managerku</string>
    <string name="slogan"><![CDATA[Simple & Easy to Use]]></string>
    <string name="sales_empty">There are no sales!</string>
    <string name="product_empty">There are no product!</string>
    <string name="product_name">Product Name</string>
    <string name="save">SAVE</string>
    <string name="price">Price</string>
    <string name="add_data">Add Data</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="demand_prediction">Demand Prediction</string>
    <string name="quantity">Quantity</string>
    <string name="about">About</string>
    <string name="log_out">Log Out</string>
    <string name="language_setting">Language Setting</string>
    <string name="financial_management">Financial Management</string>
    <string name="what_s_next">What\'s next?</string>
    <string name="change_password">Change Password</string>
    <string name="dashboard">Dashboard</string>
    <string name="product">Product</string>
    <string name="sales">Sales</string>
    <string name="profile">Profile</string>
    <string name="update">Update</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="setting">Setting</string>
    <string name="add_product">Add Product</string>
    <string name="add_sales">Add Sales</string>
    <string name="sales_count">Sales Count</string>
    <string name="sales_detail">Sales Detail</string>
    <string name="version" translatable="false">1.0</string>
    <string name="product_id">Product id:</string>
    <string name="sold">Sold:</string>
    <string name="data_added_successfully">Data added successfully!</string>
    <string name="ok" translatable="false">OK</string>
</resources>