<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.content.dashboard.DashboardFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/product"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:cardMaxElevation="4dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tv_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_quantity"
            android:textSize="16sp"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/tv_product_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="13"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="8dp"
            android:layout_gravity="bottom"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:id="@+id/icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_product"
            android:layout_marginEnd="8dp"
            android:layout_gravity="end|center_vertical"
            android:contentDescription="Product" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/sales"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:cardMaxElevation="4dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tv_sales"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sales_count"
            android:textSize="16sp"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/tv_sales_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="234"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="8dp"
            android:layout_gravity="bottom"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:id="@+id/icon_sales"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_sales"
            android:layout_marginEnd="8dp"
            android:layout_gravity="end|center_vertical"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_prediction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/sales"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"
        android:text="@string/demand_prediction"
        android:textSize="14sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:id="@+id/demand_prediction"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_margin="16dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:cardMaxElevation="4dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_prediction"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tv_demand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:hint="Data Prediction"
            android:textStyle="bold"
            android:layout_gravity="center"
            tools:ignore="RtlSymmetry" />

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>